fixed vh spacing

--- a/base.css
+++ b/base.css
@@ -1,5 +1,6 @@
 body {
   background-color: #E9E9E9;
+  overflow:hidden;
   font-size: 13px;
   color: #000;
   font-family: "Open Sans", "Helvetica", "Arial", sans-serif;
@@ -48,7 +49,7 @@ a:hover {
   background: #fff;
   border: 2px SOLID #BCBCBC;
   margin: auto;
-  height: 100vh;
+  height: 95vh;
   width: 850px;
   text-align: left;
   overflow: scroll;
